version/0.18/_sources/api/solver/_autosummary/settings/intake_fan.rst.txt
:orphan:

.. _intake_fan:

intake_fan
==========

.. autoclass:: ansys.fluent.core.solver.settings_232.intake_fan.intake_fan
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`intake_fan_child <intake_fan_child>`


.. rubric:: Included in:

================================================   ================================

Parent                                                                      Summary

================================================   ================================
:ref:`boundary_conditions <boundary_conditions>`       'boundary_conditions' child.

================================================   ================================

